--- a/packages/assetdash-ui/src/ui/index.html
+++ b/packages/assetdash-ui/src/ui/index.html
@@ -6,7 +6,7 @@
     <title>AssetDash</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="src/ui/assets/icons/AssetDashLogo.png" />
+    <link rel="shortcut icon" href="favicon.png" />
     <base href="/">
   </head>
   <body>
